--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ td {
 h2 {
   order: 1;
   flex: 100%;
+
 }
 .Competences {
   background-color: #70d6ff;
@@ -218,9 +219,29 @@ li {
   height: 15px;
   background: linear-gradient(#70d6ff, #ff38ee);
 }
+#degrade-rose-orange{
+  width: 100%;
+  height: 15px;
+  background: linear-gradient(#ff38ee, #ff6a00);
+}
 .Projets{
   background-color: #ff38ee;
   display: flex;
   flex-basis: content;
-  text-align: left;
+  margin-left: 40px;
+  margin-right: 40px;
+  text-align: center;
+  margin: auto;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.Passions{
+  background-color: #ff6a00;
+  padding: 40px 0 40px 0;
+}
+h3{
+  margin-top: 0;
+}
+.Passions, ul{
+  margin-top: 0;
 }
