--- a/css/style.css
+++ b/css/style.css
@@ -1,74 +1,7 @@
-* {
+*:not(.navbar){
   font-family: "sf_pro_displayregular";
 }
-.navbar {
-  width: 80%;
-  margin: auto;
-  display: flex;
-  text-align: center;
-  justify-content: center;
-}
-.nav_link {
-  text-align: center;
-}
 
-header::after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.logo {
-  float: left;
-  padding: 10px 0;
-}
-
-nav {
-  float: right;
-  text-align: center;
-}
-
-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-nav li {
-  display: inline-block;
-  margin-left: 70px;
-  padding-top: 23px;
-
-  position: relative;
-}
-
-nav a {
-  color: #444;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 14px;
-}
-
-nav a:hover {
-  color: #000;
-}
-
-nav a::before {
-  content: "";
-  display: block;
-  height: 5px;
-  background-color: #444;
-
-  position: absolute;
-  top: 0;
-  width: 0%;
-
-  transition: all ease-in-out 250ms;
-}
-
-nav a:hover::before {
-  width: 100%;
-}
 #title {
   text-align: center;
   font-family: "sf_pro_displaybold";
@@ -233,21 +166,25 @@ li {
 }
 .Passions {
   background-color: #ff6a00;
-  padding: 40px 0 40px 0;
+  padding: 40px 0 15px 0;
 }
 .project_table {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  background-color: #ffa9f8b7;
   border: solid 3px #4a0045;
-
 }
-
-.project_table thead {
-  background-color: #d800cd;
+.title_cell {
+  background-color: #ff56ff;
+}
+.project_table td:not(.title_cell) {
+  background-color: #ffa9f8b7;
+}
+.project_table th {
+  background-color: #d800bb;
   font-size: 30px;
-  padding-top: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .descr_cell {
   text-align: left;
@@ -256,5 +193,19 @@ h3 {
   margin-top: 0;
 }
 .Passions ul {
+  margin-top: 0;
+}
+.proj_title {
+  font-family: "sf_pro_displaybold";
+}
+.Passions li {
+  padding-bottom: 20px;
+}
+
+.Passions h3 {
+  margin-bottom: 5px;
+  text-decoration: underline;
+}
+.Passions p {
   margin-top: 0;
 }
