--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,39 @@
-*:not(.navbar){
-  font-family: "sf_pro_displayregular";
+.navbar {
+  display: flex;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: rgb(3, 0, 154);
+  color: #fff;
+}
+.nav-links a {
+  color: #fff;
+}
+.logo {
+  font-size: 32px;
+  font-family: "Montserrat";
+  font-weight: 650;
+}
+.menu {
+  display: flex;
+  gap: 2.5em;
+  font-size: 18px;
+  font-family: 'Montserrat';
+  font-weight: 500;
+  margin-right: 75px;
 }
 
+.menu li:hover {
+  background-color: #4c9e9e;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+.menu li {
+  padding: 5px 14px;
+}
 #title {
   text-align: center;
   font-family: "sf_pro_displaybold";
@@ -49,12 +81,14 @@ h2 {
 .section-title {
   margin-top: 20px;
 }
-.Presentation {
+#Presentation {
+  padding-top: 100px;
   padding-bottom: 45px;
   display: flex;
   text-align: center;
   flex-flow: row wrap;
   justify-content: center;
+  font-family: "sf_pro_displayregular";
   background-color: #e9ff70;
 }
 
@@ -75,19 +109,20 @@ td {
   margin-left: 25px;
   align-self: center;
 }
-.Presentation,
+#Presentation,
 h2 {
   order: 1;
   flex: 100%;
 }
-.Competences {
+#Competences {
   background-color: #70d6ff;
   display: flex;
   flex-basis: content;
   justify-content: center;
   text-align: center;
+  font-family: "sf_pro_displayregular";
 }
-.Competences > div {
+#Competences > div {
   padding-top: 20px;
   background-color: #caf0fd;
   padding-bottom: 15px;
@@ -127,6 +162,12 @@ li {
   font-size: 25px;
   margin: 0;
 }
+/*
+.project_table img{
+  max-width: 100px;
+  padding: 0;
+  aspect-ratio: 1;
+} */
 .title-separator {
   background-color: #001276;
   height: 1.5px;
@@ -156,17 +197,19 @@ li {
   height: 15px;
   background: linear-gradient(#ff38ee, #ff6a00);
 }
-.Projets {
+#Projets {
   background-color: #ff38ee;
   margin-left: 40px;
   margin-right: 40px;
   margin: auto;
   padding-top: 40px;
   padding-bottom: 40px;
+  font-family: "sf_pro_displayregular";
 }
-.Passions {
+#Passions {
   background-color: #ff6a00;
   padding: 40px 0 15px 0;
+  font-family: "sf_pro_displayregular";
 }
 .project_table {
   margin-left: auto;
@@ -175,10 +218,10 @@ li {
   border: solid 3px #4a0045;
 }
 .title_cell {
-  background-color: #ff56ff;
+  background-color: #ff6fff;
 }
 .project_table td:not(.title_cell) {
-  background-color: #ffa9f8b7;
+  background-color: #fd9bf5;
 }
 .project_table th {
   background-color: #d800bb;
@@ -192,20 +235,21 @@ li {
 h3 {
   margin-top: 0;
 }
-.Passions ul {
+#Passions ul {
   margin-top: 0;
+  padding-right: 70px;
 }
 .proj_title {
   font-family: "sf_pro_displaybold";
 }
-.Passions li {
+#Passions li {
   padding-bottom: 20px;
 }
 
-.Passions h3 {
+#Passions h3 {
   margin-bottom: 5px;
   text-decoration: underline;
 }
-.Passions p {
+#Passions p {
   margin-top: 0;
 }
