--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 0.1vw 0 0.1vw;
   background-color: rgb(3, 0, 154);
   color: #fff;
 }
@@ -13,14 +13,15 @@
   color: #fff;
 }
 .logo {
-  font-size: 32px;
+  font-size: 2.25vw;
   font-family: "Montserrat";
+  margin-left: 1vw;
   font-weight: 650;
 }
 .menu {
   display: flex;
   gap: 2.5em;
-  font-size: 18px;
+  font-size: 1.25vw;
   font-family: "Montserrat";
   font-weight: 500;
   margin-right: 75px;
@@ -62,9 +63,7 @@
 .underline {
   text-decoration: underline;
 }
-.items {
-  font-size: 25px;
-}
+
 .ul_title {
   font-family: "sf_pro_displaybold";
 }
@@ -83,7 +82,7 @@ h2 {
   font-family: Montserrat;
   font-weight: 700;
   text-decoration: underline;
-  text-underline-offset: 4px;
+  text-underline-offset: 04px;
 }
 #Presentation {
   padding-top: 120px;
@@ -274,4 +273,39 @@ footer img{
 }
 hr{
   margin: 0;
+}
+
+@media screen and (min-width: 1366px) {
+  .navbar{
+    padding: 0.3vw 0 0.3vw 0.5vw;
+  }
+  .menu{
+    font-size: 0.8vw;
+  }
+  .logo{
+    font-size: 1.5vw
+  }
+}
+
+@media screen and (max-width: 1366px) {
+  .collumn-title {
+    text-underline-offset : 5px
+  }
+  .Console_comp{
+    margin-right: 2.5%;
+  }
+  .App_comp{
+    margin-left: 2.5%;
+  }
+  .project_table{
+    margin-left: 5%;
+    margin-right: 5%;
+  }
+
+}
+
+@media screen and (max-width: 768px) {
+  .collumn-title {
+    text-underline-offset : 5px
+  }
 }
