Cleaning Website and changing font

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
 .navbar {
   display: flex;
   position: fixed;
-  top: 0;
   width: 100%;
   align-items: center;
   justify-content: space-between;
@@ -9,20 +14,34 @@
   background-color: rgb(3, 0, 154);
   color: #fff;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Crimson Text", serif;
+}
+
+body {
+  font-family: "Work Sans", sans-serif;
+}
+
 .nav-links a {
   color: #fff;
 }
+
 .logo {
   font-size: 2.25vw;
-  font-family: "Montserrat";
   margin-left: 1vw;
   font-weight: 650;
 }
+
 .menu {
   display: flex;
   gap: 2.5em;
   font-size: 1.25vw;
-  font-family: "Montserrat";
   font-weight: 500;
   margin-right: 75px;
 }
@@ -32,22 +51,11 @@
   border-radius: 5px;
   transition: 0.3s ease;
 }
+
 .menu li {
   padding: 5px 14px;
 }
-#title {
-  text-align: center;
-  font-family: "sf_pro_displaybold";
-  margin: 0;
-  font-size: 4em;
-}
-#title_hr {
-  border: 1px solid;
-  border-radius: 3%;
-  margin-top: 0;
-  margin-bottom: 0.3em;
-  width: 12em;
-}
+
 #pp {
   order: 2;
   margin-right: 3px;
@@ -60,39 +68,34 @@
   flex-direction: raw;
   object-fit: fill;
 }
-.underline {
-  text-decoration: underline;
-}
 
-.ul_title {
-  font-family: "sf_pro_displaybold";
-}
-.ul_content {
-  font-family: "sf_pro_displaylight_italic";
-}
-.important {
-  font-family: "sf_pro_displaymedium";
-}
 h2 {
-  font-family: "sf_pro_displaybold";
   font-size: 40px;
 }
+
 .section-title {
   margin-top: 20px;
-  font-family: Montserrat;
-  font-weight: 700;
-  text-decoration: underline;
-  text-underline-offset: 04px;
+  font-size: 2.75vw;
 }
+
 #Presentation {
-  padding-top: 120px;
+  padding-top: 10vh;
   padding-bottom: 60px;
   display: flex;
   text-align: center;
   flex-flow: row wrap;
   justify-content: center;
-  font-family: "sf_pro_displayregular";
   background-color: #e9ff70;
+}
+
+#Presentation p {
+  order: 4;
+  font-size: 1.1vw;
+  word-wrap: break-word;
+  margin-left: 1.5vw;
+  margin-right: 0.5vw;
+  line-height: 2.85vh;
+  text-align: left;
 }
 
 .about_me_tab {
@@ -105,6 +108,7 @@ h2 {
   font-size: 20px;
   background-color: rgb(247, 246, 197);
 }
+
 .about_me_tab,
 td {
   border: solid 1px black;
@@ -112,11 +116,13 @@ td {
   margin-left: 25px;
   align-self: center;
 }
+
 #Presentation,
 h2 {
   order: 1;
   flex: 100%;
 }
+
 #Competences {
   background-color: #70d6ff;
   display: flex;
@@ -124,13 +130,14 @@ h2 {
   justify-content: center;
   text-align: center;
   padding: 60px 0 60px;
-  font-family: "sf_pro_displayregular";
 }
+
 #Competences > div {
   padding-top: 20px;
   background-color: #caf0fd;
   padding-bottom: 15px;
 }
+
 .App_comp {
   padding: 0 10px 0px 20px;
   border-top-left-radius: 10%;
@@ -139,6 +146,7 @@ h2 {
   border: solid#011fc8 2px;
   border-right: 0;
 }
+
 .Web_comp {
   padding-left: 50px;
   padding-right: 50px;
@@ -147,6 +155,7 @@ h2 {
   border-left: 1px;
   border-right: 1px;
 }
+
 .Console_comp {
   padding: 0 20px 0px 10px;
   order: 3;
@@ -155,15 +164,17 @@ h2 {
   border: solid#011fc8 2px;
   border-left: 0;
 }
+
 li {
   list-style-type: none;
 }
+
 .comp_list {
   font-size: 20px;
 }
+
 .collumn-title {
   font-size: 25px;
-  font-family: Montserrat;
   font-weight: 700;
   text-decoration: underline 3px #001276;
   text-underline-offset: 15px;
@@ -176,77 +187,83 @@ li {
   height: 50px;
   aspect-ratio: 1;
 }
+
 .collumn-separation {
   border: none;
   border-left: 1px solid #011fc8;
   height: auto;
   transform: rotate(90°);
 }
+
 .comp_list > li {
   margin: 4px 0 4px 0;
 }
+
 #degrade-jaune-bleu {
   width: 100%;
   height: 15px;
   background: linear-gradient(#e9ff70, #70d6ff);
 }
+
 #degrade-bleu-rose {
   width: 100%;
   height: 15px;
   background: linear-gradient(#70d6ff, #ff38ee);
 }
+
 #degrade-rose-orange {
   width: 100%;
   height: 15px;
   background: linear-gradient(#ff38ee, #ff6a00);
 }
+
 #Projets {
   background-color: #ff38ee;
   margin: auto;
   padding-top: 60px;
   padding-bottom: 60px;
-  font-family: "sf_pro_displayregular";
 }
-th{
-  font-family: Montserrat;
+
+th {
   font-weight: 600;
 }
+
 #Passions {
   background-color: #ff6a00;
   padding: 60px 0 25px 0;
-  font-family: "sf_pro_displayregular";
 }
+
 .project_table {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
   border: solid 3px #4a0045;
 }
+
 .title_cell {
   background-color: #ff6fff;
 }
+
 .project_table td:not(.title_cell) {
   background-color: #fd9bf5;
 }
+
 .project_table th {
   background-color: #d800bb;
   font-size: 30px;
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
 .descr_cell {
   text-align: left;
 }
-h3 {
-  margin-top: 0;
-}
+
 #Passions ul {
   margin-top: 0;
   padding-right: 70px;
 }
-.proj_title {
-  font-family: "sf_pro_displaybold";
-}
+
 #Passions li {
   padding-bottom: 20px;
 }
@@ -255,10 +272,12 @@ h3 {
   margin-bottom: 5px;
   text-decoration: underline;
 }
+
 #Passions p {
   margin-top: 0;
 }
-footer{
+
+footer {
   display: flex;
   /* background-color: #001174; */
   background-color: #323b40;
@@ -266,46 +285,56 @@ footer{
   padding-top: 50px;
   padding-bottom: 50px;
 }
-footer img{
+
+footer img {
   aspect-ratio: 1;
   height: 80px;
   margin-left: 50px;
 }
-hr{
+
+hr {
   margin: 0;
 }
 
+.collumn-title u {
+  text-decoration: #011fc8;
+}
+
 @media screen and (min-width: 1366px) {
-  .navbar{
+  .navbar {
     padding: 0.3vw 0 0.3vw 0.5vw;
   }
-  .menu{
+
+  .menu {
     font-size: 0.8vw;
   }
-  .logo{
-    font-size: 1.5vw
+
+  .logo {
+    font-size: 1.5vw;
   }
 }
 
 @media screen and (max-width: 1366px) {
   .collumn-title {
-    text-underline-offset : 5px
+    text-underline-offset: 3px;
   }
-  .Console_comp{
+
+  .Console_comp {
     margin-right: 2.5%;
   }
-  .App_comp{
+
+  .App_comp {
     margin-left: 2.5%;
   }
-  .project_table{
+
+  .project_table {
     margin-left: 5%;
     margin-right: 5%;
   }
-
 }
 
 @media screen and (max-width: 768px) {
   .collumn-title {
-    text-underline-offset : 5px
+    text-underline-offset: 5px;
   }
 }
