--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ body {
 .menu {
   display: flex;
   gap: 2.5em;
-  font-size: 1.25vw;
+  font-size: 1.4vw;
   font-weight: 500;
   margin-right: 75px;
 }
@@ -64,7 +64,7 @@ body {
   border: 0.1em solid;
   border-color: black;
   border-radius: 3%;
-  height: 225px;
+  height: 10vw;
   flex-direction: raw;
   object-fit: fill;
 }
@@ -73,7 +73,7 @@ h2 {
   font-size: 40px;
 }
 
-.section-title {
+#Presentation h2 {
   margin-top: 20px;
   font-size: 2.75vw;
 }
@@ -89,27 +89,32 @@ h2 {
 }
 
 #Presentation p {
-  order: 4;
-  font-size: 1.1vw;
+  order: 5;
+  font-size: 0.85vw;
   word-wrap: break-word;
-  margin-left: 1.5vw;
-  margin-right: 0.5vw;
+  margin-left: 3.5vw;
+  margin-right: 1.85vw;
   line-height: 2.85vh;
   text-align: left;
 }
+hr {
+  width: 75%;
+  border: none ;
+  margin-top: 3vh;
+  height: 2.5px;
+  order: 4;
+}
 
-.about_me_tab {
-  flex-basis: max-content;
+#about_me_tab {
   border: solid 1px black;
   text-align: center;
   border-collapse: collapse;
-  flex-flow: row wrap;
   order: 3;
-  font-size: 20px;
+  font-size: 0.85vw;
   background-color: rgb(247, 246, 197);
 }
 
-.about_me_tab,
+#about_me_tab,
 td {
   border: solid 1px black;
   padding: 10px;
@@ -169,12 +174,12 @@ li {
   list-style-type: none;
 }
 
-.comp_list {
-  font-size: 20px;
+#Competences ul {
+  font-size: 1.0vw;
 }
 
 .collumn-title {
-  font-size: 25px;
+  font-size: 1.5vw;
   font-weight: 700;
   text-decoration: underline 3px #001276;
   text-underline-offset: 15px;
@@ -211,7 +216,7 @@ li {
   background: linear-gradient(#70d6ff, #ff38ee);
 }
 
-#degrade-rose-orange {
+#degrade-rose-or225pxange {
   width: 100%;
   height: 15px;
   background: linear-gradient(#ff38ee, #ff6a00);
@@ -224,18 +229,14 @@ li {
   padding-bottom: 60px;
 }
 
-th {
-  font-weight: 600;
-}
-
 #Passions {
   background-color: #ff6a00;
   padding: 60px 0 25px 0;
 }
 
 .project_table {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 5vw;
+  margin-right: 5vw;
   text-align: center;
   border: solid 3px #4a0045;
 }
@@ -275,6 +276,7 @@ th {
 
 #Passions p {
   margin-top: 0;
+  line-height: 1.2vw;
 }
 
 footer {
@@ -288,12 +290,8 @@ footer {
 
 footer img {
   aspect-ratio: 1;
-  height: 80px;
+  height: 4.5vw;
   margin-left: 50px;
-}
-
-hr {
-  margin: 0;
 }
 
 .collumn-title u {
