--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 html,
 body {
+  word-wrap: break-word;
+
   margin: 0;
   padding: 0;
 }
@@ -10,7 +12,7 @@ body {
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 0.1vw 0 0.1vw;
+  padding: 0.1vh 0 0.1vh 0.5vh;
   background-color: rgb(3, 0, 154);
   color: #fff;
 }
@@ -41,7 +43,7 @@ body {
 .menu {
   display: flex;
   gap: 2.5em;
-  font-size: 1.4vw;
+  font-size: 1.6vw;
   font-weight: 500;
   margin-right: 75px;
 }
@@ -99,7 +101,7 @@ h2 {
 }
 hr {
   width: 75%;
-  border: none ;
+  border: none;
   margin-top: 3vh;
   height: 2.5px;
   order: 4;
@@ -175,7 +177,7 @@ li {
 }
 
 #Competences ul {
-  font-size: 1.0vw;
+  font-size: 1vw;
 }
 
 .collumn-title {
@@ -187,9 +189,8 @@ li {
 }
 
 .project_table img {
-  max-width: 100px;
   padding: 0;
-  height: 50px;
+  height: 3vw;
   aspect-ratio: 1;
 }
 
@@ -231,12 +232,13 @@ li {
 
 #Passions {
   background-color: #ff6a00;
-  padding: 60px 0 25px 0;
+  padding: 1vh 3vw 1vh 0;
 }
 
 .project_table {
   margin-left: 5vw;
   margin-right: 5vw;
+  font-size: 0.85vw;
   text-align: center;
   border: solid 3px #4a0045;
 }
@@ -251,46 +253,47 @@ li {
 
 .project_table th {
   background-color: #d800bb;
-  font-size: 30px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  font-size: 1.85vw;
+  padding-top: 1.2vh;
+  padding-bottom: 1.2vh;
 }
 
 .descr_cell {
   text-align: left;
 }
 
-#Passions ul {
-  margin-top: 0;
-  padding-right: 70px;
-}
-
 #Passions li {
-  padding-bottom: 20px;
+  padding-bottom: 1vh;
 }
 
 #Passions h3 {
-  margin-bottom: 5px;
+  margin-bottom: 0.65vh;
+  font-size: 2vw;
   text-decoration: underline;
 }
 
 #Passions p {
   margin-top: 0;
-  line-height: 1.2vw;
+  font-size: 1vw;
+  line-height: 1.25vh;
 }
 
 footer {
   display: flex;
-  /* background-color: #001174; */
   background-color: #323b40;
   flex-direction: row;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 2vh;
+  padding-bottom: 2vh;
 }
 
+html > hr {
+  height: 10px;
+  color: #fff;
+  width: 100%;
+}
 footer img {
   aspect-ratio: 1;
-  height: 4.5vw;
+  height: 4vw;
   margin-left: 50px;
 }
 
@@ -310,9 +313,21 @@ footer img {
   .logo {
     font-size: 1.5vw;
   }
+  #Passions p {
+    font-size: 0.95vw;
+    line-height: 2.25vh;
+  }
+  #Passions h3 {
+    font-size: 1.25vw;
+  }
+
+  footer{
+  padding-top: 2.5vh;
+  padding-bottom: 2.5vh;
+  }
 }
 
-@media screen and (max-width: 1366px) {
+@media screen and (min-width: 1366px) {
   .collumn-title {
     text-underline-offset: 3px;
   }
@@ -328,6 +343,10 @@ footer img {
   .project_table {
     margin-left: 5%;
     margin-right: 5%;
+  }
+
+  #Passions {
+    padding: 5vh 3vw 3vh 0;
   }
 }
 
